<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edit_distance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="phone"
        android:hint="@string/distancia"
        android:inputType="numberDecimal"
        android:textAlignment="center" />


    <TextView
        android:id="@+id/text_distance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_distance"
        android:text="@string/total_em_km"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/edit_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_distance"
        android:layout_marginTop="16dp"
        android:autofillHints="phone"
        android:padding="16dp"
        android:hint="@string/preco"
        android:inputType="numberDecimal"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/text_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_price"
        android:text="@string/preco_por_litro"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/edit_autonomy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_price"
        android:layout_marginTop="16dp"
        android:autofillHints="phone"
        android:hint="@string/autonomia"
        android:inputType="numberDecimal"
        android:padding="16dp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/text_autonomy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_autonomy"
        android:text="@string/kms_por_litro"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/edit_toll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_autonomy"
        android:layout_marginTop="16dp"
        android:autofillHints="phone"
        android:hint="@string/pedagio"
        android:inputType="numberDecimal"
        android:padding="16dp"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/text_toll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_toll"
        android:text="@string/preco_total"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/button_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_toll"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/green"
        android:text="@string/calcular"
        android:textAllCaps="true"/>

    <TextView
        android:id="@+id/text_gasto_total_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_calculate"
        android:layout_marginTop="8dp"
        android:text="@string/gasto_total"
        android:textAlignment="center"
        android:textSize="24sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_gasto_total_label"
        android:text="@string/gasto_total_rs"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="32sp"/>


</RelativeLayout>